== 1.20.002

	New features:
	------------


	Enhancements:
	----------------------------
	+ API:
	    - Api v1 removed

	Bugfixes:
	----------------------------

== 1.20

	New features:
	------------
	+ Added multiple simultaneous authentication methods (Apache, AD, LDAP, Radius, NetIQ);
	+ Added fping scanning support;
	+ Added selectable scanning type (ping/pear/fping);
	+ Added L2 domains;
	+ Added option to define address as default GW for subnet;
	+ Added customizable address tags with compressed option;
	+ Added temporary subnet / address shares;
	+ Added quick subnet masks;
	+ Added nameserver sets per subnets (jonashauge);
	+ Added optional syslog as log location;
	+ REST API:
		+ documentation: http://phpipam.net/api-documentation/
		+ API v2, old v1 support added
		+ Complete rewrite of all API calls;
		+ New security models (crypt, ssl, none);
		+ Support for custom fields;
		+ JSON / XML output
		+ Full read/write controllers (Sections, Subnets/Folders, Addresses, Vlans, Vrfs);
	+ PowerDNS integration:
		+ Automatic reverse records creation (PTR) - IPv4 and IPv6;
		+ Automatic SOA, NS record creation;
		+ DNS domain management;
	+ Added Scan agents to scan subnets remotely;
	+ Added firewall zone mappings and module;
	+ Added per-subnet DNS resolvers;
	+ Added option to mark subnet as utilized (full);

	Enhancements:
	----------------------------
	+ All tables are now InnoDB by default;
	+ Upgraded jQuery to 2.1.3;
	+ All functions rewritten to classes/methods;
	+ Parametized all SQL queries, moved from MySQLI to PDO;
	+ Added VLAN/VRF to search and to search results export;
	+ Redesigned admin and tools menu;
	+ Added scanned/discovered subnets to tools for faster overview;
	+ Per-user display settings;
	+ New widget - tools shortcuts;
	+ New widget - IP calculator;
	+ New widget - request IP address;
	+ Clickable links for subnet fields;
	+ Custom VRF fields;
	+ Subnets can be now linked to devices;
	+ Import/export enhancements;